# homefit

animation-data/: Cargo.toml
animation-data/src/: main.rs
rust-data/: Cargo.toml
rust-data/src/: main.rs  test.rs
rust-ws/: Cargo.toml
rust-ws/src/: main.rs  server.rs
web/: package-lock.json  package.json
web-archive/: package-lock.json  package.json
web-archive/src/: App.svelte
web-archive/src/routes/: Place.svelte
web-kit/: package-lock.json  package.json
web-kit/src/components/: Scene.svelte
web-kit/src/routes/: +layout.js  +layout.svelte  +page.svelte
web-oldpose/: package-lock.json  package.json
web-oldpose/public/mediapipe/: index.d.ts  package.json  pose_solution_wasm_bin.js
web-oldpose/src/: App.svelte  app.css
web-oldpose/src/components/: CircularOrbit.svelte  Menu.svelte  Scene.svelte  TextBubble.svelte
web-oldpose/src/lib/: PlayerController.js  PoseDetector.js  ThreeScene.js  TimelineNode.js  WebSocketClient.js
web-oldpose/src/routes/: ExtractAnimationData.svelte  Gym.svelte  Home.svelte
web-oldpose/src/store/: animationDataStore.js  archetypeStore.js  timelineStore.js  websocketMessagesStore.js  websocketStore.js
web-oldpose/src/utils/: methods.js  ropes.js
web/public/: .gitignore
web/src/: App.svelte
web/src/components/: Scene.svelte
web/src/lib/: PlayerController.js  RapierWorld.js  ThreeScene.js
web/src/routes/: +layout.svelte  +page.svelte  Header.svelte  layout.css
web/src/routes/sverdle/how-to-play/: +page.svelte
web/src/utils/: ropes.js
web/static/: .gitignore
