[package]
name = "rust-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = [
    "macros",
    "sync",
    "rt-multi-thread",
] } # event-driven, non-blocking I/O platform for writing asynchronous applications
tokio-stream = "0.1.14"
warp = "0.3" # web server framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
